ft-340 fixed button spacing

--- a/client/src/pages/JoinPage/style.scss
+++ b/client/src/pages/JoinPage/style.scss
@@ -106,7 +106,7 @@
 
           button {
             padding: 0.75rem;
-            margin: 1rem 0;
+            margin: 0.25rem 0;
           }
         }
       }
